# transformers-js-v3-migrator

./: .gitignore  .gitmodules  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.local.json
src/: git_operations.py  hub_client.py  migration_rules.py  migration_types.py  migrator.py  session_manager.py
src/migrations/: __init__.py  model_binary_migration.py  readme_migration.py
src/utils/: ai_readme_migrator.py
validation/: .gitignore  README.md  package.json
validation/src/: cli.js  utils.js  validate-model.js
